--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,4 +5,13 @@
     <view>{{var2}}</view>
     <view>{{var3}}</view>
     <view>{{var4}}</view>
+    <text>{{ a === 10? "变量 a 等于10": "变量 a 不等于10"}}</text>
+    <view wx:if="{{length > 5}}">1</view>
+    <view wx:elif="{{length > 2}}">2</view>
+    <view wx:else>3</view>
+
+    <!-- 列表 -->
+    <view wx:for="{{books}}">
+      {{index}}: {{item.name}}, {{item.price}}
+    </view>
 </view>
